--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load my1filter %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -13,6 +14,8 @@
 </head>
 <body>
 hello django template!!! {{name}}
+{{hello|upper}}
+num:{{num|add_filter:10}}
 <table>
     <thead>
         <tr>
