--- a/form_app/templates/register.html
+++ b/form_app/templates/register.html
@@ -7,12 +7,13 @@
 <body>
 <form action="{% url 'register' %}" method="post">
     {% csrf_token %}
-    <lable>用户名:</lable>
-    <input type="text" placeholder="用户名" name="username">
-    <br/>
-    <label>密码</label>
-    <input type="password" placeholder="密码" name="password">
-    <br/>
+    {{form.as_table}}
+<!--    <lable>用户名:</lable>-->
+<!--    <input type="text" placeholder="用户名" name="username">-->
+<!--    <br/>-->
+<!--    <label>密码</label>-->
+<!--    <input type="password" placeholder="密码" name="password">-->
+<!--    <br/>-->
     <input type="submit" value="提交">
 </form>
 </body>
