矫正form.as_table使用方法外面需要包着table 这里可以使用{{form}}就行了

--- a/form_app/templates/register.html
+++ b/form_app/templates/register.html
@@ -7,7 +7,9 @@
 <body>
 <form action="{% url 'register' %}" method="post">
     {% csrf_token %}
-    {{form.as_table}}
+    <table>
+        {{form.as_table}}
+    </table>
 <!--    <lable>用户名:</lable>-->
 <!--    <input type="text" placeholder="用户名" name="username">-->
 <!--    <br/>-->
